err/animanager.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/SQLAlchemy-1.2.0.egg-info'...
Listing './lib/python3.5/site-packages/aiohttp'...
Listing './lib/python3.5/site-packages/aiohttp-2.3.7.dist-info'...
Listing './lib/python3.5/site-packages/animanager'...
Listing './lib/python3.5/site-packages/animanager/anidb'...
Compiling './lib/python3.5/site-packages/animanager/anidb/titles.py'...
***   File "./lib/python3.5/site-packages/animanager/anidb/titles.py", line 56
    titles: 'Titles'
          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/animanager/animecmd'...
Compiling './lib/python3.5/site-packages/animanager/animecmd/__init__.py'...
***   File "./lib/python3.5/site-packages/animanager/animecmd/__init__.py", line 150
    cur.execute(f'PRAGMA foreign_keys={value:d}')
                                               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/animanager/cmd'...
Listing './lib/python3.5/site-packages/animanager/cmd/results'...
Listing './lib/python3.5/site-packages/animanager/db'...
Listing './lib/python3.5/site-packages/animanager/db/query'...
Listing './lib/python3.5/site-packages/animanager/files'...
Listing './lib/python3.5/site-packages/animanager/sqlite'...
Listing './lib/python3.5/site-packages/animanager/subcmds'...
Listing './lib/python3.5/site-packages/animanager-0.11.0.dist-info'...
Listing './lib/python3.5/site-packages/apsw-3.9.2.post1.egg-info'...
Listing './lib/python3.5/site-packages/async_timeout'...
Listing './lib/python3.5/site-packages/async_timeout-2.0.0.dist-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/mir'...
Listing './lib/python3.5/site-packages/mir/anidb'...
Compiling './lib/python3.5/site-packages/mir/anidb/anime.py'...
***   File "./lib/python3.5/site-packages/mir/anidb/anime.py", line 43
    aid: int
       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mir/anidb/api.py'...
***   File "./lib/python3.5/site-packages/mir/anidb/api.py", line 47
    name: str
        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mir/anidb/titles.py'...
***   File "./lib/python3.5/site-packages/mir/anidb/titles.py", line 39
    aid: int
       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mir/cp'...
Listing './lib/python3.5/site-packages/mir/sqlite3m'...
Compiling './lib/python3.5/site-packages/mir/sqlite3m/__init__.py'...
***   File "./lib/python3.5/site-packages/mir/sqlite3m/__init__.py", line 53
    return (f'<{cls} with migrations={self._migrations!r},'
                                                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mir.anidb-1.2.0.dist-info'...
Listing './lib/python3.5/site-packages/mir.cp-1.0.0.dist-info'...
Listing './lib/python3.5/site-packages/mir.sqlite3m-1.0.0.dist-info'...
Listing './lib/python3.5/site-packages/multidict'...
Listing './lib/python3.5/site-packages/multidict-3.3.2.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sqlalchemy'...
Listing './lib/python3.5/site-packages/sqlalchemy/connectors'...
Listing './lib/python3.5/site-packages/sqlalchemy/databases'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/firebird'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/mssql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/mysql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/oracle'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/postgresql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/sqlite'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/sybase'...
Listing './lib/python3.5/site-packages/sqlalchemy/engine'...
Listing './lib/python3.5/site-packages/sqlalchemy/event'...
Listing './lib/python3.5/site-packages/sqlalchemy/ext'...
Listing './lib/python3.5/site-packages/sqlalchemy/ext/declarative'...
Listing './lib/python3.5/site-packages/sqlalchemy/orm'...
Listing './lib/python3.5/site-packages/sqlalchemy/sql'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing/plugin'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing/suite'...
Listing './lib/python3.5/site-packages/sqlalchemy/util'...
Listing './lib/python3.5/site-packages/tabulate-0.8.1.egg-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/wcwidth'...
Listing './lib/python3.5/site-packages/wcwidth/tests'...
Listing './lib/python3.5/site-packages/wcwidth-0.1.7.dist-info'...
Listing './lib/python3.5/site-packages/yarl'...
Listing './lib/python3.5/site-packages/yarl-0.18.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
